--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ boto3 = "^1.28.50"
 
 [tool.poetry.group.dev.dependencies]
 boto3-stubs = {extras = ["elbv2", "essential"], version = "^1.28.50"}
+autopep8 = "^2.0.4"
 
 [build-system]
 requires = ["poetry-core"]
