[deploy] Upload and run flask app to EC2 instances

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -2,6 +2,8 @@ FROM python:3.11-slim
 
 WORKDIR /app
 
+ENV INSTANCE_NUMBER=-1
+
 RUN pip install --upgrade pip setuptools poetry~=1.6.0
 COPY pyproject.toml poetry.lock ./
 RUN poetry install --only app
