--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,12 +2,15 @@
 name = "log8415-tp1"
 version = "0.1.0"
 description = ""
-authors = ["NextFire <git@yuru.moe>", "quentinguidee <contact@quentinguidee.dev>"]
+authors = [
+    "NextFire <git@yuru.moe>",
+    "quentinguidee <contact@quentinguidee.dev>",
+    "aurpur <ikamaaurel@gmail.com>",
+]
 readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.11"
-paramiko = "^3.3.1"
 
 [tool.poetry.group.app.dependencies]
 flask = "^2.3.3"
@@ -15,6 +18,7 @@ gunicorn = "^21.2.0"
 
 [tool.poetry.group.deploy.dependencies]
 boto3 = "^1.28.50"
+paramiko = "^3.3.1"
 
 [tool.poetry.group.dev.dependencies]
 boto3-stubs = {extras = ["elbv2", "essential"], version = "^1.28.50"}
