--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,6 +1,6 @@
 FROM python:3.11-slim
 
-WORKDIR /app
+WORKDIR /src
 
 ENV INSTANCE_NUMBER=-1
 
@@ -8,7 +8,7 @@ RUN pip install --upgrade pip setuptools poetry~=1.6.0
 COPY pyproject.toml poetry.lock ./
 RUN poetry install --only app
 
-COPY app/ .
+COPY app app
 
 ENTRYPOINT [ "poetry", "run", "gunicorn", "-b", "0.0.0.0", "app:app"]
 EXPOSE 8000
