--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,10 +23,11 @@ backoff = "^2.2.1"
 requests = "^2.31.0"
 
 [tool.poetry.group.bench.dependencies]
+boto3 = "^1.28.50"
 requests = "^2.31.0"
 
 [tool.poetry.group.dev.dependencies]
-boto3-stubs = {extras = ["elbv2", "essential"], version = "^1.28.50"}
+boto3-stubs = {extras = ["cloudwatch", "elbv2", "essential"], version = "^1.28.50"}
 autopep8 = "^2.0.4"
 
 [build-system]
