[bench] get lb cloudwatch data
Co-authored-by: NextFire <git@yuru.moe>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ requests = "^2.31.0"
 [tool.poetry.group.bench.dependencies]
 boto3 = "^1.28.50"
 requests = "^2.31.0"
+orjson = "^3.9.7"
 
 [tool.poetry.group.dev.dependencies]
 boto3-stubs = {extras = ["cloudwatch", "elbv2", "essential"], version = "^1.28.50"}
