--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,8 @@ requests = "^2.31.0"
 boto3 = "^1.28.50"
 requests = "^2.31.0"
 orjson = "^3.9.7"
+numpy = "^1.26.0"
+matplotlib = "^3.8.0"
 
 [tool.poetry.group.dev.dependencies]
 boto3-stubs = {extras = ["cloudwatch", "elbv2", "essential"], version = "^1.28.50"}
